@@ -1,9 +1,12 @@
-* Fri Jan 17 2014 Ding-Yi Chen <dchen at redhat.com> - 1.2.4
+* Tue Jan 28 2014 Ding-Yi Chen <dchen at redhat.com> - 1.2.4
+- Resolves Bug 1058631 - ManagePRM generate Broken %defattr
 - Enhancement:
   + ManageTarget: ADD_CUSTOM_TARGET_COMMAND: NO_FORCE: new option.
 - Changed:
   + ManageTranslation: Fix po build
   + ManageRPM: Fix defattr
+  + ManageReleaseFedora: helper scripts in CMAKE_SOURCE_DIR/cmake-fedora 
+    can also be located
 
 * Thu Jan 09 2014 Ding-Yi Chen <dchen at redhat.com> - 1.2.3
 - Resolves Bug 1040333 - RFE: Suiport .gitignore file as 
